--- a/index.html
+++ b/index.html
@@ -2,6 +2,29 @@
 
 <html lang="am">
 <head>
+<style>
+body {
+  font-family: 'Poppins', sans-serif;
+  background: linear-gradient(to right, #dfe9f3, #ffffff);
+  text-align: center;
+  color: #333;
+  padding: 20px;
+}
+button {
+  background: #4CAF50;
+  border: none;
+  color: white;
+  padding: 12px 24px;
+  border-radius: 8px;
+  font-size: 18px;
+  cursor: pointer;
+  transition: 0.3s;
+}
+button:hover {
+  background: #45a049;
+  transform: scale(1.05);
+}
+</style>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 <title>Hayu Math Kids - Avatars</title>
